--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,26 +1,35 @@
 ---
 galaxy_info:
-  author: Gerard Braad
-  description: Deploys personal dotfiles
-  company: gbraad.nl
-  license: BSD
-  min_ansible_version: 2.0
-  platforms:
-  - name: EL
-    versions:
-    - all
-  - name: Fedora
-    versions:
-    - all
-  - name: Amazon
-    versions:
-    - all
-  - name: Debian
-    versions:
-    - all
-  - name: Ubuntu
-    versions:
-    - all
-  galaxy_tags:
-  - development
+
+    role_name: dotfiles
+    namespace: gbraad
+
+    author: Gerard Braad
+    description: Deploys personal dotfiles
+    company: gbraad.nl
+    license: MIT
+    min_ansible_version: "2.9"
+
+    platforms:
+        - name: EL
+          versions:
+              - all
+        - name: Fedora
+          versions:
+              - all
+        - name: Amazon
+          versions:
+              - all
+        - name: Debian
+          versions:
+              - all
+        - name: Ubuntu
+          versions:
+              - all
+
+    galaxy_tags:
+        - dotfiles
+        - install
+        - development
+
 dependencies: []
