--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
+user: "gbraad"
 dotfiles_path: "~{{ user }}/.dotfiles"
 dotfiles_install_url: "https://dotfiles.gbraad.nl/install.sh"
-user: "{{ user }}"
