--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,3 +1,3 @@
 ---
 dotfiles_target_user: "{{ user | default(ansible_user_id) }}"
-dotfiles_path: "~/{{ dotfiles_target_user }}/.dotfiles"
+dotfiles_path: "{{ lookup('ansible.builtin.env', 'HOME') }}/.dotfiles"
